@startuml
'https://plantuml.com/sequence-diagram

autonumber

@startuml

class App
{
    fxmlloader: FXMLLoader
    scene: Scene
    public static void main(String[] args)
    public void start(Stage stage)
}

class Controller
{
    class toDoList
    String[]: item
    String[]: description
    String[]: complete
    LocalDate[]: due_date
    toDoList: lists
    TextField: item_name
    TextField: item_description
    DatePicker: item_date
    TextField: Item_Number1
    TextField: Item_Number2
    TextField: Item_Number3
    TextField: Item_Number4
    TextField: new_description
    TextField: file_name
    TextField: file_path
    DatePicker: new_date
    String: item
    String: description
    LocalDate: date
    String: temp
    int: item_number
    add_item(ActionEvent event)
    remove_item(ActionEvent event)
    clear_items(ActionEvent event)
    edit_description(ActionEvent event)
    edit_todoDate(ActionEvent event)
    complete(ActionEvent event)
    sort(ActionEvent event)
    display(ActionEvent event)
    display_completed(ActionEvent event)
    display_incomplete(ActionEvent event)
    save(ActionEvent event)
    load(ActionEvent event)
}

class new_item
{
    String[]: item
    String[]: description
    String[]: complete
    LocalDate[]: due_date
    toDoList: list
    add_item(toDoList lists, String item_name, String item_description, LocalDate date)
}

class r_item
{
    String[]: item
    String[]: description
    String[]: complete
    LocalDate[]: due_date
    toDoList: list
    String[]: copy1
    String[]: copy3
    String[]: copy4
    LocalDate[]: copy2
    remove_item(toDoList lists, int item_number)
}


class clear
{
    toDoList list
    clear_items()
}


class new_description
{
    edit_description(toDoList lists, String new_description, int item_number)
}


class new_doDate
{
    edit_todoDate(toDoList lists, LocateDate date, int item_number)
}


class set_complete
{
    complete(toDoList lists, int item_number)
}


class sort_by_date
{
    LocalDate: temp1
    String: temp2
    String temp3
    String temp4
    sort(toDoList lists)
}

class print
{
    display(toDoList lists)
}

class print_complete
{
    display_completed(toDoList lists)
}

class print_incomplete
{
    display_incomplete(toDoList lists)
}

class save_list
{
    File: outfile
    PrintWriter: pw
    save(toDoList lists, String file_name)
}

class load_list
{
    toDoList: list
    File: file
    Scanner: sc
    String[]: read_in
    Pattern: pat
    String: line
    int: i
    int: j
    String[]: temp
    String[]: items
    String[]: descriptions
    LocalDate[]: due_dates
    String[]: completed
    load(String file_name)
}

Controller <|-- new_item
Controller <|-- r_item
Controller <|-- clear
Controller <|-- new_description
Controller <|-- new_doDate
Controller <|-- set_complete
Controller <|-- sort_by_date
Controller <|-- print
Controller <|-- print_complete
Controller <|-- print_incomplete
Controller <|-- save_list
Controller <|-- load_list



@enduml